syntax = "proto3";

option go_package="github.com/yishak-cs/New-PKIcls/protogen";

message CertificateRequest {
    string common_name = 1;
    bytes serial_number= 2;
    string public_key= 3;
}

message CertficateResponse{
    string subject_name = 4;
    bytes cert_serial_number= 5;
    string pub_key= 6;
    string issuer = 7;
    string signature = 8;
}

message CAPublicKey{
    string public_key = 9;
}

message Empty{}

message Data{
    string data = 10;
}

service CAService {
    rpc IssueCertificate(CertificateRequest) returns (CertficateResponse);
    rpc GetPublicKey(Empty) returns (CAPublicKey);
}

service PartyAService {
    rpc SendCertificate(Empty) returns (CertficateResponse);
    rpc verifyCertificate(CertficateResponse) returns (Empty);
    rpc SendMessage(Data) returns (Empty);
}

service PartyBService {
    rpc SendCertificate(Empty) returns (CertficateResponse);
    rpc verifyCertificate(CertficateResponse) returns (Empty);
}
